# django_project

./: .gitignore  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_alter_category_options_alter_product_options.py  0005_alter_category_options_alter_product_options_and_more.py  0005_blog_alter_category_options_alter_product_options_and_more.py  0006_remove_blog_image_blog_preview_and_more.py  0006_version.py
catalog/templates/catalog/: base.html  blog_detail.html  blog_form.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_info.html  product_list.html
catalog/templates/catalog/includes/: product_card.html
catalog/templatetags/: my_tags.py
config/: settings.py
config/management/commands/: fill.py
data/: blog.json  category.json  product.json  version.json
static/css/: bootstrap.min.css
static/js/: color-modes.js
